# baseball_scoring_work

./: README.md  pyproject.toml
db/: memo.md  scoreing_work
src/: aa.pkl  utils.py  welcome.py
src/pages/: sample1.py  sample2.py  sample3.py
