[tool.poetry]
name = "baseball-scoring-work"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"
packages = [{include = "baseball_scoring_work"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "1.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
